@@ -2712,6 +2712,14 @@ int main(int argc, char **argv)
     interface_color_pair[FUNCTION_TAG].bright = FALSE;
 #endif
 
+#if !defined(NANO_TINY) && !defined(USE_SLANG)
+    /* Ask ncurses for the key codes for Control+Left and Control+Right. */
+    if ((int)tigetstr("kLFT5") > 0)
+	controlleft = key_defined(tigetstr("kLFT5"));
+    if ((int)tigetstr("kRIT5") > 0)
+	controlright = key_defined(tigetstr("kRIT5"));
+#endif
+
 #ifdef DEBUG
     fprintf(stderr, "Main: open file\n");
 #endif
